# fractal-tasks-template

./: .pre-commit-config.yaml  DEVELOPERS_GUIDE.md  LICENSE  README.md  build_template.sh  build_template_config.yml  copier.yml  keywords_map.yml  pyproject.toml
.github/workflows/: build_and_test.yml  copier_ci.yml  copy-install-test-build.yml  copy-install-test.yml  github_release.yml
project/: .pre-commit-config.yaml  README.md.jinja  pyproject.toml.jinja
project/.github/workflows/: build_and_test.yml  build_and_test.yml.jinja
project/src/{{package_name}}/: __FRACTAL_MANIFEST__.json  __FRACTAL_MANIFEST__.json.jinja  __init__.py.jinja  thresholding_label_task.py  thresholding_task.py
project/src/{{package_name}}/dev/: create_manifest.py.jinja  task_list.py  update_manifest.py.jinja
project/tests/: __init__.py.jinja  test_thresholding_label_task.py.jinja  test_thresholding_task.py.jinja  test_valid_args_schemas.py  test_valid_args_schemas.py.jinja  test_valid_task_interface.py
src/build_template/: __init__.py  main.py
src/fractal_tasks_template/: __FRACTAL_MANIFEST__.json  __init__.py  example_segmentation_task.py  gaussian_blur_task.py  region_props_features_task.py  threshold_segmentation_task.py
src/fractal_tasks_template/dev/: task_list.py
template/: .gitignore  .pre-commit-config.yaml  README.md.jinja  pyproject.toml.jinja
template/.github/workflows/: build_and_test.yml.jinja
template/src/fractal_tasks_template/: __init__.py.jinja  {{ segmentation_task_name | lower | replace('-', '_') | replace(' ', '_') }}_task.py.jinja
template/src/fractal_tasks_template/dev/: task_list.py.jinja
template/src/{{ package_name }}/: __FRACTAL_MANIFEST__.json.jinja  utils.py  {% if include_feature_task %}{{ feature_module }}.py{% endif %}.jinja  {% if include_image_processing_task %}{{ image_processing_module }}.py{% endif %}.jinja  {% if include_segmentation_task %}{{ segmentation_module }}.py{% endif %}.jinja
template/src/{{ package_name }}/dev/: task_list.py.jinja
template/src/{{ package_name }}/dev/docs_info/: {% if include_feature_task %}{{ feature_module }}.md{% endif %}.jinja  {% if include_segmentation_task %}{{ segmentation_module }}.md{% endif %}.jinja  {% if include_segmentation_task %}{{ segmentation_module }}{% endif %}.jinja
template/src/{{package_name}}/: __FRACTAL_MANIFEST__.json.jinja  utils.py  {{ segmentation_task_name | lower | replace('-', '_') | replace(' ', '_') }}_task.py.jinja
template/src/{{package_name}}/dev/: task_list.py.jinja
template/tests/: __init__.py.jinja  test_task.py.jinja  test_valid_args_schemas.py.jinja  test_valid_manifest.py  test_valid_manifest.py.jinja  {% if include_feature_task %}test_{{ feature_module }}.py{% endif %}.jinja  {% if include_image_processing_task %}test_{{ image_processing_module }}.py{% endif %}.jinja  {% if include_segmentation_task %}test_{{ segmentation_module }}.py{% endif %}.jinja
tests/: __init__.py  copy-install-test-build.sh  copy-install-test.sh  test_gaussian_blur_task.py  test_region_props_features_task.py  test_task.py  test_threshold_segmentation_task.py  test_valid_args_schemas.py  test_valid_manifest.py  test_valid_task_interface.py
tests/copier/: answers.yml  copy-install-test-build.sh
